<resources>
    <string name="app_name">THA_194089T</string>
    <string name="name_error">name is incorrect !</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="_1">1</string>
    <string name="title">Name</string>
    <string name="cakeimage">Cake Image</string>
    <string name="stock_available">Stock Available</string>
    <string name="floting_button">Floting button</string>
</resources>