<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#A0FF31">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"



        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:background="#F6FFEC">

            <TextView
                android:id="@+id/item_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/_1"
                android:textSize="0.001sp"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.262" />

            <TextView
                android:id="@+id/item_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="148dp"
                android:text="@string/title"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/item_id_txt"
                app:layout_constraintTop_toTopOf="@+id/item_id_txt" />

            <TextView
                android:id="@+id/item_description_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="@+id/item_name_txt"
                app:layout_constraintTop_toBottomOf="@+id/item_name_txt" />

            <TextView
                android:id="@+id/item_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="148dp"
                android:layout_marginTop="64dp"
                android:text="@string/price"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/item_id_txt"
                app:layout_constraintTop_toTopOf="@+id/item_id_txt" />

            <Button
                android:id="@+id/mainLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:text="@string/edit"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cakeImage"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@+id/item_id_txt"
                app:layout_constraintTop_toTopOf="@+id/item_id_txt"
                app:srcCompat="@drawable/caramel_cake"
                android:contentDescription="@string/cakeimage" />

            <Button
                android:id="@+id/buttonSelectedImage"
                android:layout_width="96dp"
                android:layout_height="25dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="68dp"
                android:text="@string/stock_available"
                android:textAllCaps="false"
                android:textSize="5sp"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/item_id_txt"
                app:layout_constraintTop_toTopOf="@+id/item_id_txt"
                tools:ignore="SmallSp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        />


</LinearLayout>